crates/hir-ty/tests/snapshots/method_access_snapshots__access_unrelated_other_package.snap
---
source: crates/hir-ty/tests/method_access_snapshots.rs
expression: out
---
A.pub: com.example.A.pub() -> void [args: ]
A.pro: <none> [args: ]
A.pkg: <none> [args: ]
A.priv: <none> [args: ]
A.stat: com.example.A.stat() -> void [args: ]
