crates/hir-ty/tests/snapshots/method_access_snapshots__mode_static.snap
---
source: crates/hir-ty/tests/method_access_snapshots.rs
expression: out
---
A.stat: com.example.A.stat() -> void [args: ]
A.pub: <none> [args: ]
I.istat: com.example.I.istat() -> void [args: ]
I.inst: <none> [args: ]
D.istat: <none> [args: ]
D.inst: <none> [args: ]
