crates/hir-ty/tests/snapshots/method_access_snapshots__protected_receiver_rule.snap
---
source: crates/hir-ty/tests/method_access_snapshots.rs
expression: out
---
C.pro: com.example.A.pro() -> void [args: ]
A.pro: <none> [args: ]
